api/stateful/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: k8s-demo
  labels:
    app: k8s-demo
spec:
  serviceName: k8s-demo
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
      - name: k8s-demo
        image: web-harbor.xxxxx.com/path/k8s-demo@sha256:d45cf3d9a16e770fc6065df1dfdf313dda1ea494b771b4d153fac8a5772462e3
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
          name: http-port
        resources:
          limits:
            cpu: "500m"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        livenessProbe:
          tcpSocket:
            port: 8889
          initialDelaySeconds: 20
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /hello
            port: 8889
          initialDelaySeconds: 20
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8889
        volumeMounts:
        - name: k8s-demo-data
          mountPath: /app/data
  # 申请卷
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: k8s-demo-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: nfs-client
      volumeMode: Filesystem
