api/stateful/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo
  namespace: default
  labels:
    app: k8s-demo
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-demo.xxxxx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-demo  # 这里的名字跟service.yaml中的metadata.name一致
            port:
              number: 80
